@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jesse Stay
 copyright_year   = 2009
 
-version = 0.02002
+version = 0.03000
 
 [@Filter]
 -bundle=@YANICK
