@@ -1,6 +1,14 @@
 Revision history for Catalyst-Authentication-Credential-Twitter
 
 {{$NEXT}}
+  [ENHANCEMENTS]
+    - change get_authorization_url() for get_authentication_url(), which
+bypass the authorize page if the user has already authorized the app.
+    (thanks to Francoise Dehinbo for the suggestion)
+
+  [BUG FIXES]
+    - Ensure that authenticate() doesn't explode if store is not DBIx::Class.
+
   [DOCUMENTATION]
     - Spell out limitation with the stores.
 
